fix jumpin scrollbar

--- a/assets/sass/_components/settings.scss
+++ b/assets/sass/_components/settings.scss
@@ -7,6 +7,9 @@ html {
 	font-size: $html-font-size;
 	color: $base-color;
 	box-sizing: border-box;
+	// Fix 'jumping scrollbar'
+  width:100vw;
+  overflow-x:hidden;
 }
 
 *,
